# vita0.5k

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cp15_info.js  generate_keys.py
src/: bls.cpp  bls.hpp  emulator.cpp  emulator.h  keys.cpp  keys.hpp  main.cpp  pup.hpp  sce_decrypt.hpp  stream.cpp  types.hpp
src/common/: cp15_info.h  stream.cpp  stream.h  stream.hpp  types.h  util.h
src/core/: device.h  memory.cpp  memory.h
src/software/: bls.hpp  keys.hpp  pup.cpp  pup.hpp  sce_decrypt.cpp  sce_decrypt.hpp
